# theora

./: meson.build  meson_options.txt
doc/: meson.build
doc/spec/: meson.build
examples/: meson.build
include/: meson.build
lib/: meson.build
lib/arm/: arm2gnu-wrapper.py
tests/: meson.build
