option('asm', type: 'feature', value: 'enabled', description: 'Enable assembly optimizations')
option('asflag-probe', type: 'feature', value: 'enabled', description: 'Enable instructions not supported by the default assembler flags (Arm only).')
option('collect-metrics', type: 'feature', value: 'disabled', description: 'Enable metrics collection for mode training')
