option('spec', type: 'feature', value: 'auto', description: 'Build the specification')
option('valgrind-testing', type: 'feature', value: 'disabled', description: 'Enable running of tests inside Valgrind')
option('asm', type: 'feature', value: 'enabled', description: 'Enable assembly optimizations')
option('asflag-probe', type: 'feature', value: 'enabled', description: 'Enable instructions not supported by the default assembler flags (Arm only).')
option('telemetry', type: 'feature', value: 'disabled', description: 'Enable debugging output controls')
option('mem-constraint', type: 'feature', value: 'disabled', description: 'Abort if size exceeds 16384x16384 (for fuzzing only)')
option('examples', type: 'feature', value: 'disabled', description: 'Enable examples')
option('collect-metrics', type: 'feature', value: 'disabled', description: 'Enable metrics collection for mode training')
